--- a/banglore_home_prices_final.ipynb
+++ b/banglore_home_prices_final.ipynb
@@ -258,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Drop features that are not required to build our model**"
+    "**Drop features that are not required**"
    ]
   },
   {
@@ -628,13 +628,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Above shows that total_sqft can be a range (e.g. 2100-2850). For such case we can just take average of min and max value in the range. There are other cases such as 34.46Sq. Meter which one can convert to square ft using unit conversion. I am going to just drop such corner cases to keep things simple**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -723,13 +716,6 @@
     "df4.total_sqft = df4.total_sqft.apply(convert_sqft_to_num)\n",
     "df4 = df4[df4.total_sqft.notnull()]\n",
     "df4.head(2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**For below row, it shows total_sqft as 2475 which is an average of the range 2100-2850**"
    ]
   },
   {
@@ -957,7 +943,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Examine locations which is a categorical variable. We need to apply dimensionality reduction technique here to reduce number of locations**"
+    "**Examine locations which is a categorical variable. Apply dimensionality reduction technique here to reduce number of locations--> Introduce a new category called 'others'**"
    ]
   },
   {
@@ -1123,20 +1109,6 @@
    ],
    "source": [
     "len(location_stats[location_stats<=10])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2 style=\"color:blue\">Dimensionality Reduction</h2>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Any location having less than 10 data points should be tagged as \"other\" location. This way number of categories can be reduced by huge amount. Later on when we do one hot encoding, it will help us with having fewer dummy columns**"
    ]
   },
   {
@@ -1443,14 +1415,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:blue\">Outlier Removal Using Business Logic</h2>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**As a data scientist when you have a conversation with your business manager (who has expertise in real estate), he will tell you that normally square ft per bedroom is 300 (i.e. 2 bhk apartment is minimum 600 sqft. If you have for example 400 sqft apartment with 2 bhk than that seems suspicious and can be removed as an outlier. We will remove such outliers by keeping our minimum thresold per bhk to be 300 sqft**"
+    "<h2 style=\"color:blue\">Outlier Detection and Removal </h2>"
    ]
   },
   {
@@ -1571,13 +1536,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Check above data points. We have 6 bhk apartment with 1020 sqft. Another one is 8 bhk and total sqft is 600. These are clear data errors that can be removed safely**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
@@ -1653,13 +1611,6 @@
    ],
    "source": [
     "df6.price_per_sqft.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Here we find that min price per sqft is 267 rs/sqft whereas max is 12000000, this shows a wide variation in property prices. We should remove outliers per location using mean and one standard deviation**"
    ]
   },
   {
@@ -1757,7 +1708,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**We should also remove properties where for same location, the price of (for example) 3 bedroom apartment is less than 2 bedroom apartment (with same square ft area). What we will do is for a given location, we will build a dictionary of stats per bhk, i.e.**\n",
+    "**Remove properties where for same location, the price of (for example) 3 bedroom apartment is less than 2 bedroom apartment (with same square ft area)**\n",
     "```\n",
     "{\n",
     "    '1' : {\n",
@@ -1771,8 +1722,7 @@
     "        'count': 22\n",
     "    },    \n",
     "}\n",
-    "```\n",
-    "**Now we can remove those 2 BHK apartments whose price_per_sqft is less than mean price_per_sqft of 1 BHK apartment**"
+    "```\n"
    ]
   },
   {
@@ -1873,34 +1823,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3 style='color:green'>Before and after outlier removal: Rajaji Nagar</h3>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"rajaji_nagar_outliers.png\"></img>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3 style='color:green'>Before and after outlier removal: Hebbal</h3>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"hebbal_outliers.png\"></img>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
@@ -1934,13 +1856,6 @@
     "plt.hist(df8.price_per_sqft,rwidth=0.8)\n",
     "plt.xlabel(\"Price Per Square Feet\")\n",
     "plt.ylabel(\"Count\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2 style='color:blue'>Outlier Removal Using Bathrooms Feature</h2>"
    ]
   },
   {
@@ -2106,13 +2021,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**It is unusual to have 2 more bathrooms than number of bedrooms in a home**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
@@ -2207,13 +2115,6 @@
    ],
    "source": [
     "df8[df8.bath>df8.bhk+2]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Again the business manager has a conversation with you (i.e. a data scientist) that if you have 4 bedroom home and even if you have bathroom in all 4 rooms plus one guest bathroom, you will have total bath = total bed + 1 max. Anything above that is an outlier or a data error and can be removed**"
    ]
   },
   {
@@ -3262,7 +3163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**We can see that in 5 iterations we get a score above 80% all the time. This is pretty good but we want to test few other algorithms for regression to see if we can get even better score. We will use GridSearchCV for this purpose**"
+    "**We can see that in 5 iterations we get a score above 80% all the time. Test few other algorithms for regression to see if we can get even better score. We will use GridSearchCV for this purpose**"
    ]
   },
   {
@@ -3502,45 +3403,6 @@
    "source": [
     "predict_price('Indira Nagar',1000, 3, 3)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2 style='color:blue'>Export the tested model to a pickle file</h2>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "with open('banglore_home_prices_model.pickle','wb') as f:\n",
-    "    pickle.dump(lr_clf,f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2 style='color:blue'>Export location and column information to a file that will be useful later on in our prediction application</h2>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "columns = {\n",
-    "    'data_columns' : [col.lower() for col in X.columns]\n",
-    "}\n",
-    "with open(\"columns.json\",\"w\") as f:\n",
-    "    f.write(json.dumps(columns))"
-   ]
   }
  ],
  "metadata": {
@@ -3559,7 +3421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
